--- a/src/components/contacts/Contacts.css
+++ b/src/components/contacts/Contacts.css
@@ -27,3 +27,9 @@
     margin: .25rem 1rem .5rem 0;
     background-color: honeydew;
 }
+
+.searchField {
+    padding: .2rem;
+    width: 25rem;
+    margin: 1rem 0 0 0;
+}
