--- a/src/components/ConnectBetter.css
+++ b/src/components/ConnectBetter.css
@@ -1,5 +1,5 @@
 /* Import the google web fonts you want to use */
-@import url("https://fonts.googleapis.com/css?family=Comfortaa|Patua+One");
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap');
 
 /*Typography
 --------------------------------------------------------------*/
@@ -16,11 +16,25 @@ textarea {
 
 body {
     padding: 0 3rem;
+    /* background-color: #A4BAB7; */
+    /* background-color: #EFF2C0; */
+    /* background-color: #F4F4F9; */
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Patua One", serif;
+  font-family: "Comfortaa", Arial, sans-serif;
   letter-spacing: 2px;
+  font-weight: 700;
+}
+
+h1 {
+  margin-bottom: 0;
+  margin-top: 4rem;
+}
+
+h2 {
+  margin-top: 2rem;
+  
 }
 
 p {
@@ -31,3 +45,12 @@ p {
   margin-block-end: 0;
 }
 
+button {
+  padding: .3rem;
+  margin: .5rem 0;
+  margin-right: .5rem
+}
+
+select {
+  margin: .3rem
+}
