--- a/src/components/categories/Categories.css
+++ b/src/components/categories/Categories.css
@@ -1,15 +1,19 @@
 .categories {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    gap: 10px;
 }
 
 .category {
-    background-color: azure;
-    border: 1px dotted darkmagenta;
+    background-color: #f4f4f9;
+    border: 1px solid #000501;
     padding: .7rem;
     margin: .5rem 0;
-    padding: 0.5 rem;
-    margin: 0.5 rem;
+    min-width: 15rem;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    border-radius: 5px; 
+    font-size: 200%;
 }
