--- a/src/components/nav/NavBar.css
+++ b/src/components/nav/NavBar.css
@@ -1,85 +1,73 @@
+:root {
+  --text: #2B3044;
+  --line: #BBC1E1;
+  --line-active: #274690;
+}
+
+ul {
+  font-size: 18px;
+  margin: 0;
+  color: var(--text);
+}
+ul .navbar__link {
+  display: inline-block;
+  position: relative;
+  text-decoration: none;
+  color: inherit;
+  margin: 0 var(--spacing, 0px);
+  transition: margin 0.25s;
+}
+ul .navbar__link svg {
+  width: 150px;
+  height: 40px;
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  transform: translate(-50%, 7px) translateZ(0) scale(2, 1);
+  fill: none;
+  stroke: var(--stroke, var(--line));
+  stroke-linecap: round;
+  stroke-width: 2px;
+  stroke-dasharray: var(--offset, 69px) 278px;
+  stroke-dashoffset: 361px;
+  transition: stroke 0.25s ease var(--stroke-delay, 0s), stroke-dasharray 0.35s;
+}
+ul .navbar__link:hover {
+  --spacing: 4px;
+  --stroke: var(--line-active);
+  --stroke-delay: .1s;
+  --offset: 180px;
+}
+
+html {
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+}
+
+* {
+  box-sizing: inherit;
+}
+*:before, *:after {
+  box-sizing: inherit;
+}
+
 .navbar {
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: space-between;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  padding: 0;
 }
 
 .navbar__item {
-    /* flex-basis: 15%; */
-    list-style-type: none;
+  flex-basis: 10%;
+  list-style-type: none;
 }
 
-.navbar__logout {
-    /* margin-left: auto; */
+.main__header {
+  text-align: center;
 }
 
-.main_header {
-    /* background-color: #A52422; */
-
-}
-
-a.navbar__link {
-    font-size: larger;
-}
-
-ul.navbar {
-    margin: 0;
-    padding: 0;
-}
-
-
-/* TEST Link animations */
-
-:root {
-    --text: #2B3044;
-    --line: #BBC1E1;
-    --line-active: #275EFE;
-  }
-  
-  p a {
-    display: inline-block;
-    position: relative;
-    text-decoration: none;
-    color: inherit;
-    margin: 0 var(--spacing, 0px);
-    transition: margin 0.25s;
-  }
-  p a svg {
-    width: 76px;
-    height: 40px;
-    position: absolute;
-    left: 50%;
-    bottom: 0;
-    transform: translate(-50%, 7px) translateZ(0);
-    fill: none;
-    stroke: var(--stroke, var(--line));
-    stroke-linecap: round;
-    stroke-width: 2px;
-    stroke-dasharray: var(--offset, 69px) 278px;
-    stroke-dashoffset: 361px;
-    transition: stroke 0.25s ease var(--stroke-delay, 0s), stroke-dasharray 0.35s;
-  }
-  p a:hover {
-    --spacing: 4px;
-    --stroke: var(--line-active);
-    --stroke-delay: .1s;
-    --offset: 180px;
-  }
-  
-  * {
-    box-sizing: inherit;
-  }
-  *:before, *:after {
-    box-sizing: inherit;
-  }
-  
-  body .dribbble {
-    position: fixed;
-    display: block;
-    right: 20px;
-    bottom: 20px;
-  }
-  body .dribbble img {
-    display: block;
-    height: 28px;
-  }
+.main__subheader {
+  margin-top: 0.5rem;
+  margin-bottom: 4rem;
+}/*# sourceMappingURL=NavBar.css.map */
