--- a/src/components/categories/Categories.css
+++ b/src/components/categories/Categories.css
@@ -2,8 +2,8 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-evenly;
-    gap: 10px;
+    justify-content: left;
+    gap: 20px;
 }
 
 .category {
@@ -16,4 +16,8 @@
     transition: 0.3s;
     border-radius: 5px; 
     font-size: 200%;
+}
+
+.form-control {
+    width: 40rem;
 }
