--- a/src/components/contacts/Contacts.css
+++ b/src/components/contacts/Contacts.css
@@ -26,7 +26,7 @@
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border-radius: 5px;
-    width: 80%;
+    width: 70%;
     margin: auto;
     margin-top: 2rem;
     /* position: absolute;
@@ -85,4 +85,8 @@
 
 a {
     color:#000501;
+}
+
+.form-control {
+    width: 90%;
 }
