--- a/src/components/contacts/Contacts.css
+++ b/src/components/contacts/Contacts.css
@@ -20,7 +20,7 @@
 .contactForm {
     background-color: #f4f4f9;
     border: 1px solid #000501;
-    padding: .7rem;
+    padding: 2rem;
     margin: .5rem 0;
     min-width: 19rem;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
@@ -64,7 +64,7 @@
 .searchField {
     padding: .2rem;
     width: 25rem;
-    margin:  0 0 1rem 0;
+    margin:  0 1rem 1rem 0;
 }
 
 .sortDropdown {
